--- a/portal-frontend/src/app/features/home/inbox/inbox.component.scss
+++ b/portal-frontend/src/app/features/home/inbox/inbox.component.scss
@@ -46,12 +46,23 @@ a {
     }
   }
 
+  .mat-mdc-form-field-icon-suffix {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   .clear-button {
     padding: 0 !important;
-    margin-right: 6px !important;
     width: rem(24) !important;
     height: rem(24) !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
+    &:last-child {
+      margin-right: 4px !important;
+    }
 
     & > *[role=img] {
       width: rem(16);
